# mcp-crpto-order-flow-server

./: .gitignore  100_COVERAGE_REPORT.md  10MIN_TEST_RESULTS.md  AUDIT_REPORT.md  CHANGELOG.md  COLLECTION_DETAILS.md  COMPLETE_SCHEMA_REFERENCE.md  DATA_FLOW_DIAGRAM.md  DATA_VERIFICATION_REPORT.md  EXCHANGE_COIN_TABLE_MATRIX.md  EXCHANGE_DATA_DIAGRAM.md  KATS_COMPARISON_SUMMARY.md  KATS_IMPLEMENTATION_COMPARISON.ipynb  PHASE1_PHASE2_STATUS.md  PRODUCTION_SETUP_GUIDE.md  README.md  SEPARATED_STORAGE_CONFIG.md  STORAGE_CONFIGURATION.md  STREAMING_STORAGE_MCP_ARCHITECTURE.md  STREAM_REFERENCE.md  SYSTEM_ARCHITECTURE.md  SYSTEM_WORKFLOW_DIAGRAM.md  TOOL_WRAPPER_REFERENCE.md  WORKFLOW_DIAGRAM.md  all_in_one_collector.py  analyze_collection_details.py  analyze_empty.py  analyze_oi.py  check_data_collection.py  check_streaming_status.py  check_token_availability.py  cleanup_unavailable_tables.py  collect_data_10min.py  collection_analysis.txt  collector_output.txt  complete_collector.py  comprehensive_exchange_audit.py  dashboard.py  data_collection_report.py  data_filler.py  (+82 more)
config/: streaming_config.json
crewai_integration/: __init__.py
crewai_integration/config/: __init__.py  agents.yaml  crews.yaml  loader.py  schemas.py  system.yaml  tasks.yaml
crewai_integration/core/: __init__.py  controller.py  permissions.py  registry.py
crewai_integration/docs/: README.md  (+2 more)
sibyl_integration/: README.md  __init__.py  mcp_client.py  requirements.txt
src/: __init__.py  http_api.py  mcp_server.py
tests/: test_phase2_data_ops.py  test_phase2_integration.py
(+168 files in other folders)
