[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "mcp-crypto-arbitrage-server"
version = "2.3.0"
description = "Real-time MCP server for cryptocurrency arbitrage analysis with time series analytics"
authors = [
    {name = "Sayantan", email = "sayantanbhow@gmail.com"}
]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.8"

dependencies = [
    "fastmcp>=0.1.0",
    "websockets>=12.0",
    "nest-asyncio>=1.5.0",
    "statsmodels>=0.14.0",
    "scipy>=1.10.0",
    "scikit-learn>=1.0.0",
    "aiohttp>=3.9.0",
    "duckdb>=0.9.0",
    "pandas>=1.5.0",
    "numpy>=1.23.0",
    "crewai>=0.28.0",
    "pyyaml>=6.0"
]

[project.scripts]
mcp-crypto-arbitrage = "src.mcp_server:main"

[tool.setuptools]
package-dir = {"" = "."}

[tool.setuptools.packages.find]
where = ["."]
include = ["src*"]
